Minor spacing fixes

--- a/src/clincoded/static/scss/clincoded/modules/_form.scss
+++ b/src/clincoded/static/scss/clincoded/modules/_form.scss
@@ -163,6 +163,7 @@ input[type=search] {
     display: block;
 
     @media screen and (min-width: $screen-md-min) {
+        display: table-cell;
         width: 45%;
         vertical-align: top;
     }
